<resources>
    <string name="app_name">RecipeApp</string>
    <string name="get_a_new_recipe_now">Get A New Recipe Now!</string>
    <string name="not_sure_what_to_ncook_tonight">Not sure what to \ncook tonight?</string>
    <string name="generate_recipe">Generate Recipe</string>
    <string name="recipe">Recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="manually_add_recipe">Manually Add Recipe</string>
    <string name="add_meal">Add Meal</string>
    <string name="edit_meal">Edit Meal</string>
    <string name="image_url">Image URL</string>
    <string name="add_edit_meal">Add/Edit Meal</string>
</resources>