<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MealFieldActivity">
    <LinearLayout
        android:id="@+id/llHead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingVertical="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:animateLayoutChanges="true">
        <ImageView
            android:id="@+id/ivBack"
            android:paddingVertical="@dimen/dp_8"
            android:layout_width="@dimen/dp_56"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_arrow_back_24"
            app:tint="?attr/colorOnBackground"/>
        <TextView
            android:id="@+id/tvHead"
            android:paddingVertical="4dp"
            android:textSize="@dimen/text_size_large"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/dp_24"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_edit_meal"
            android:textColor="?attr/colorOnBackground"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_weight="1"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llHead"
        app:layout_constraintBottom_toBottomOf="parent" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8">

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/tvlStrMeal"
                style="?attr/textInputOutlinedDenseStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Meal Name"
                app:endIconMode="clear_text">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvStrMeal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/dp_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvlStrMeal"
                android:id="@+id/tvlStrMealThumb"
                style="?attr/textInputOutlinedDenseStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/image_url"
                app:endIconMode="clear_text">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvStrMealThumb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvIngredientsHead"
                android:layout_marginTop="@dimen/dp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvlStrMealThumb"
                android:textSize="@dimen/text_size_large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnBackground"
                android:textStyle="bold"
                android:text="@string/ingredients"/>

            <LinearLayout
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvIngredientsHead"
                android:id="@+id/llContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="@dimen/dp_16"/>

            <TextView
                android:id="@+id/tvInstructionsHead"
                android:layout_marginTop="@dimen/dp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llContainer"
                android:textSize="@dimen/text_size_large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnBackground"
                android:textStyle="bold"
                android:text="@string/instructions"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginBottom="@dimen/dp_72"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvInstructionsHead"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/tvlStrInstructions"
                style="?attr/textInputOutlinedDenseStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvStrInstructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="200dp"
                    android:inputType="textMultiLine"
                    android:imeOptions="actionDone"
                    android:gravity="top|start" />
            </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_save_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/dp_16"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fabSave"
        android:layout_margin="@dimen/dp_16"/>
</androidx.constraintlayout.widget.ConstraintLayout>